[gd_scene load_steps=3 format=3 uid="uid://dpu617pjpuyok"]

[ext_resource type="Theme" uid="uid://d0vxuepyv7a5d" path="res://resources/themes/progress_bar.tres" id="1_6afyt"]
[ext_resource type="Script" path="res://ui/combat/unit_level_container/level_container.gd" id="2_0o2b1"]

[node name="LevelContainer" type="VBoxContainer"]
custom_minimum_size = Vector2(127, 23)
offset_left = 127.0
offset_right = 127.0
offset_bottom = 23.0
theme = ExtResource("1_6afyt")
theme_override_constants/separation = 0
script = ExtResource("2_0o2b1")

[node name="UpperContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(127, 23)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 8

[node name="LevelLabel" type="Label" parent="UpperContainer"]
layout_mode = 2
text = "Lvl 15"

[node name="XPLabel" type="Label" parent="UpperContainer"]
self_modulate = Color(0.509804, 0.509804, 0.509804, 1)
layout_mode = 2
size_flags_horizontal = 6
text = "23 XP"

[node name="LevelProgressBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(0, 3)
layout_mode = 2
value = 15.0
show_percentage = false
